fix url wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ a {
     font-size:1em;
     color: #130f30;
     text-decoration: underline;
+    white-space: pre;           /* CSS 2.0 */
+    white-space: pre-wrap;      /* CSS 2.1 */
+    white-space: pre-line;      /* CSS 3.0 */
+    white-space: -pre-wrap;     /* Opera 4-6 */
+    white-space: -o-pre-wrap;   /* Opera 7 */
+    white-space: -moz-pre-wrap; /* Mozilla */
+    white-space: -hp-pre-wrap;  /* HP Printers */
+    word-wrap: break-word;      /* IE 5+ */
 }
 
 a:hover {
@@ -216,10 +224,10 @@ article ul, p {
     text-align:center;   
 }
 time {
-       display:inline-block;
-       margin:1em auto 2em auto;
-       color:#eee;
-       text-shadow: 0 0 5px #333, 1px 1px 0 #000;
+    display:inline-block;
+    margin:1em auto 2em auto;
+    color:#eee;
+    text-shadow: 0 0 5px #333, 1px 1px 0 #000;
 }
 .day, .month, .year {
     padding:0.5em 1em;
@@ -243,69 +251,69 @@ time {
     position:relative;
 }
 .month:before, .month:after {
-       content: '';
-       z-index:35;
-       margin:0;
-       padding:0;
-       position: absolute;
-       border-style: solid;
-       border-color: transparent;
-       bottom: -0.5em;
+    content: '';
+    z-index:35;
+    margin:0;
+    padding:0;
+    position: absolute;
+    border-style: solid;
+    border-color: transparent;
+    bottom: -0.5em;
 }
 .month:before {
-       border-width: 0 0.5em 0.5em 0;
-       border-right-color: #1B5050;
-       left: 0;
+    border-width: 0 0.5em 0.5em 0;
+    border-right-color: #1B5050;
+    left: 0;
 }
 .month:after {
-       border-width: 0 0 0.5em 0.5em;    
-       border-left-color: #1B5050;
-       right: 0;
+    border-width: 0 0 0.5em 0.5em;    
+    border-left-color: #1B5050;
+    right: 0;
 }
 .day:before, .year:after {
-       content: '';
-       margin:0;
-       padding:0;
-       z-index:30;
-       position: absolute;
-       border-style: solid;
-       border-color: #49DCDC;   
-       top: -0.35em;
-       border-width: 1.21em;    
+    content: '';
+    margin:0;
+    padding:0;
+    z-index:30;
+    position: absolute;
+    border-style: solid;
+    border-color: #49DCDC;   
+    top: -0.35em;
+    border-width: 1.21em;    
 }
 .year:after {
-       border-right-color: transparent;
-       right: -1.9em;
+    border-right-color: transparent;
+    right: -1.9em;
 }
 .day:before {
-       border-left-color: transparent;
-       left: -1.9em;
+    border-left-color: transparent;
+    left: -1.9em;
 }                                  
 .day:after, .year:before {
-       content: '';
-       z-index:25;
-       margin:0;
-       padding:0;
-       position: absolute;
-       border-style: solid;
-       border-color: transparent;
+    content: '';
+    z-index:25;
+    margin:0;
+    padding:0;
+    position: absolute;
+    border-style: solid;
+    border-color: transparent;
 }
 .day:after {
-       border-width: 0 0 0.5em 0.5em;    
-       border-left-color: #1B5050;
-       left: -0.05em;
-       
+    border-width: 0 0 0.5em 0.5em;    
+    border-left-color: #1B5050;
+    left: -0.05em;
+
 }
 .year:before {
-       border-width: 0 0.5em 0.5em 0;
-       border-right-color: #1B5050;
-       right: 0;
-       bottom: 0;
+    border-width: 0 0.5em 0.5em 0;
+    border-right-color: #1B5050;
+    right: 0;
+    bottom: 0;
 }
 .archive a {
-       display:block;
-       text-align:center;
-       font-size:2em;
+    display:block;
+    text-align:center;
+    font-size:2em;
 }
 .highlight, .gist, iframe{
     margin:1em;
